package group12.Entities;

public enum OrderStatus {
    SUBMITTED,
    ACCEPTED,
    REJECTED,
    FILLED,
    FAILED
}
