package group12.Entities;

public enum OrderType {
    BUY,
    SELL
}
